syntax = "proto3";

package envoy.extensions.decompressors.v3;

import "google/protobuf/any.proto";

import "udpa/annotations/migrate.proto";
import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";

option java_package = "io.envoyproxy.envoy.extensions.decompressors.v3";
option java_outer_classname = "LibraryProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Decompressor]
// [#extension: envoy.decompressors]

message DecompressorLibrary {
  // Decompressor library specific configuration. See the supported libraries for further
  // documentation.
  google.protobuf.Any typed_config = 1;
}
